--- a/infra/package.json
+++ b/infra/package.json
@@ -1,4 +1,10 @@
 {
   "name": "@asiusai/infra",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "@pulumi/cloudflare": "^6.12.0",
+    "@pulumi/hcloud": "^1.29.0",
+    "@pulumi/pulumi": "^3.213.0",
+    "ts-node": "^10.9.2"
+  }
 }
