remove site from workspaces for cloudflare compatibility

--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "workspaces": [
     "connect",
     "infra",
-    "api",
-    "site"
+    "api"
   ],
   "devDependencies": {
     "@types/bun": "latest"
