--- a/infra/package.json
+++ b/infra/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@pulumi/cloudflare": "^6.12.0",
+    "@pulumi/command": "^1.1.3",
     "@pulumi/hcloud": "^1.29.0",
     "@pulumi/pulumi": "^3.213.0",
     "ts-node": "^10.9.2"
