--- a/api/package.json
+++ b/api/package.json
@@ -2,12 +2,21 @@
   "name": "@asiusai/api",
   "private": true,
   "scripts": {
-    "dev": "bun --watch index.ts"
+    "dev": "bun --watch index.ts",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.15",
     "@ts-rest/open-api": "3.52.1",
     "@ts-rest/serverless": "3.52.1",
     "@types/jsonwebtoken": "^9.0.10",
+    "drizzle-orm": "^0.45.1",
     "jsonwebtoken": "^9.0.3"
+  },
+  "devDependencies": {
+    "drizzle-kit": "^0.31.8"
   }
 }
