--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "packageManager": "bun@1.2.9",
   "scripts": {
-    "fix": "biome check --write"
+    "fix": "biome check --write",
+    "test": "bun test"
   },
   "workspaces": [
     "connect",
