api.asius.ai working

--- a/api/package.json
+++ b/api/package.json
@@ -8,9 +8,9 @@
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "fix": "biome check --write",
-    "test-device": "bun run scripts/test-device.ts",
-    "test-device:konik": "bun run scripts/test-device.ts konik",
-    "test-device:asius": "bun run scripts/test-device.ts asius"
+    "test:integration": "INTEGRATION=1 bun test scripts/device.test.ts",
+    "test:integration:konik": "INTEGRATION=1 TARGET=konik bun test scripts/device.test.ts",
+    "test:integration:asius": "INTEGRATION=1 TARGET=asius bun test scripts/device.test.ts"
   },
   "dependencies": {
     "@libsql/client": "^0.15.15",
