--- a/api/package.json
+++ b/api/package.json
@@ -2,8 +2,7 @@
   "name": "@asiusai/api",
   "private": true,
   "scripts": {
-    "dev": "bun run db:push && bun run --watch index.ts",
-    "db:push": "drizzle-kit push",
+    "dev": "bun run --watch index.ts",
     "db:studio": "drizzle-kit studio",
     "test:integration": "INTEGRATION=1 bun test scripts/device.test.ts",
     "test:integration:konik": "INTEGRATION=1 TARGET=konik bun test scripts/device.test.ts",
